--- a/assets/scss/abstract/_variables.scss
+++ b/assets/scss/abstract/_variables.scss
@@ -1,6 +1,5 @@
 //Font Family
-$font-family : 'Montserrat';
-$font-family2 : 'Open-sans';
+$font-family : 'Montserrat', open-sans;
 
 //Font weight
 $regular: 400;
