--- a/assets/scss/components/_profile.scss
+++ b/assets/scss/components/_profile.scss
@@ -31,6 +31,7 @@
         flex-direction: column;
         h2 {
             font-size: 22px;
+            font-weight: 700;
         }
         p {
             font-size: 14px;
