--- a/assets/scss/layout/_main.scss
+++ b/assets/scss/layout/_main.scss
@@ -5,3 +5,22 @@
         }
     }
 }
+
+.contenedor__main__titulo {
+    font-size: 16px;
+    font-weight: 600;
+    margin: 10px 0;
+}
+
+.contenedor__main__subtitulo {
+    font-size: 18px;
+    font-weight: 700;
+    margin: 10px 0;
+}
+
+.contenedor__main__frase {
+    font-family: $font-family;
+    font-size: 12px;
+    font-weight: 400;
+    margin: 10px 0; 
+}
