--- a/assets/scss/abstract/_variables.scss
+++ b/assets/scss/abstract/_variables.scss
@@ -1,5 +1,6 @@
 //Font Family
-$font-family : 'Montserrat', 'open-sans';
+$montserrat : 'Montserrat', sans-serif;
+$open-sans: 'Open-sans', sans-serif;
 
 //Font weight
 $regular: 400;
