--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9876,7 +9876,7 @@ h3 {
   }
 }
 h2, h3, h4, h5, p {
-  font-family: "Montserrat", "open-sans";
+  font-family: "Montserrat", sans-serif;
 }
 
 .contenedor__nav {
@@ -9889,37 +9889,72 @@ h2, h3, h4, h5, p {
   list-style: none;
 }
 
-.contenedor__header {
-  height: 200px;
-  background-image: url(../img/image-banner.png);
-  background-position: right;
-  background-repeat: no-repeat;
-  background-size: cover;
+@media only screen and (max-width: 767.98px) {
+  .contenedor__header {
+    height: 200px;
+    background-image: url(../img/image-banner.png);
+    background-position: right;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 }
-
-.contenedor__main-item img {
-  width: 100%;
+@media only screen and (min-width: 768px) {
+  .contenedor__header {
+    height: 200px;
+    background-image: url(../img/image-banner.png);
+    background-position: right;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 }
+@media only screen and (max-width: 767.98px) {
+  .contenedor__main-item img {
+    width: 100%;
+  }
 
-.contenedor__main__titulo {
-  font-size: 16px;
-  font-weight: 600;
-  margin: 10px 0;
+  .contenedor__main__titulo {
+    font-size: 16px;
+    font-weight: 600;
+    margin: 10px 0;
+  }
+
+  .contenedor__main__subtitulo {
+    font-size: 18px;
+    font-weight: 700;
+    margin: 10px 0;
+  }
+
+  .contenedor__main__frase {
+    font-family: "Open-sans", sans-serif;
+    font-size: 12px;
+    font-weight: 400;
+    margin: 10px 0;
+  }
 }
+@media only screen and (min-width: 768px) {
+  .contenedor__main-item img {
+    width: 100%;
+  }
 
-.contenedor__main__subtitulo {
-  font-size: 18px;
-  font-weight: 700;
-  margin: 10px 0;
+  .contenedor__main__titulo {
+    font-size: 16px;
+    font-weight: 600;
+    margin: 10px 0;
+  }
+
+  .contenedor__main__subtitulo {
+    font-size: 18px;
+    font-weight: 700;
+    margin: 10px 0;
+  }
+
+  .contenedor__main__frase {
+    font-family: "Open-sans", sans-serif;
+    font-size: 12px;
+    font-weight: 400;
+    margin: 10px 0;
+  }
 }
-
-.contenedor__main__frase {
-  font-family: "Montserrat", "open-sans";
-  font-size: 12px;
-  font-weight: 400;
-  margin: 10px 0;
-}
-
 .contenedor {
   display: grid;
   grid-template-columns: 1fr;
